--- a/src/App.css
+++ b/src/App.css
@@ -3,13 +3,13 @@
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
+  animation: App-logo-spin infinite 5s linear;
   height: 80px;
 }
 
 .App-header {
-  background-color: #222;
-  height: 150px;
+  background-color: #42f46e;
+  height: 220px;
   padding: 20px;
   color: white;
 }
@@ -23,6 +23,23 @@
 }
 
 @keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.mt-5 {
+  margin-top: 20px;
+}
+
+.calculator {
+  display: flex;
+  flex-direction: column;
+}
+.table-wrapper {
+  display: flex;
+  justify-content: center;
 }
